--- a/Cloudiness.html
+++ b/Cloudiness.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Max Temperature</title>
+    <title>Cloudiness</title>
+
     <link rel="stylesheet" href="style.css">
     <!-- CSS only -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
@@ -60,11 +61,11 @@
             <div class="col-md-8 col-sm-12 col-lg-8">
                 <div class="box left-box">
                     <div class="header">
-                        <h2>Max Temperature</h2>
+                        <h2>Cloudiness</h2>
                     </div>
                     <hr>
-                    <img src="../Resources/assets/images/Fig1.png" class="img_single" style="width:85%" alt="">
-                    <p class="txt_maxtemp ">As seen in the figure, the latitude of a city is approaching the equator in the southern hemisphere, the maximum temperature increase, and while latitude moves away from zero in the northern hemisphere the maximum temperature decreases. So, the results indicate higher temperatures close to the equator. However, it should be noted that the southern hemisphere tends to be warmer this time of the year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this data was gathered.</p>
+                    <img src="./Resources/assets/images/Fig3.png" class="img_single" style="width:85%" alt="">
+                    <p class="txt_cloudiness">The above figure suggests that cloudiness and latitude have a weak correlation. It can be seen that the cloudiness percentage is the same for many locations in both the southern and northern hemispheres for the date the data was collected. Also, the latter suggests that there may be any other factors that affect cloudiness rather than the latitude.</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-12 col-lg-4">
@@ -75,21 +76,21 @@
                     <hr>
                     <div class="row row1_main">
                         <div class="col-md-6 col-sm-6">
-                            <a href="MaxTemp.html"><img class="graph_fixed" src="../Resources/assets/images/Fig1.png" style="width:100%"
+                            <a href="MaxTemp.html"><img class="graph_active" src="./Resources/assets/images/Fig1.png" style="width:100%"
                                     style="height:100%" alt=""></a>
                         </div>
                         <div class="col-md-6 col-sm-6">
-                            <a href="Humidity.html"><img class="graph_active" src="../Resources/assets/images/Fig2.png" style="width:100%"
+                            <a href="Humidity.html"><img class="graph_active" src="./Resources/assets/images/Fig2.png" style="width:100%"
                                     style="height:100%" alt=""></a>
                         </div>
                     </div>
                     <div class="row row2_main">
                         <div class="col-md-6 col-sm-6">
-                            <a href="Cloudiness.html"><img class="graph_active" src="../Resources/assets/images/Fig3.png" style="width:100%"
+                            <a href="Cloudiness.html"><img class="graph_fixed" src="./Resources/assets/images/Fig3.png" style="width:100%"
                                     style="height:100%" alt=""></a>
                         </div>
                         <div class="col-md-6 col-sm-6">
-                            <a href="WindSpeed.html"><img class="graph_active" src="../Resources/assets/images/Fig4.png" style="width:100%"
+                            <a href="WindSpeed.html"><img class="graph_active" src="./Resources/assets/images/Fig4.png" style="width:100%"
                                     style="height:100%" alt=""></a>
                         </div>
                     </div>
@@ -97,9 +98,16 @@
             </div>
         </div>
 
+
+
+
         <div class="footer">
             <p>Copyright Iván Velázquez - DataAnalytics BootCamp 2020</p>
-        </div>
+          </div>
+
+
+
+
 </body>
 
 </html>
