--- a/Comparison.html
+++ b/Comparison.html
@@ -69,14 +69,14 @@
                         <div class="col-md-6 col-sm-12">
                             <p class="comp_titles">vs. Max Temperature</p>
                             <a href="MaxTemp.html">
-                                <img class="graph_active" src="../Resources/assets/images/Fig1.png" style="width:100%"
+                                <img class="graph_active" src="./Resources/assets/images/Fig1.png" style="width:100%"
                                     alt="">
                             </a>
                         </div>
                         <div class="col-md-6 col-sm-12">
                             <p class="comp_titles">vs. Humidity</p>
                             <a href="Humidity.html">
-                                <img class="graph_active" src="../Resources/assets/images/Fig2.png" style="width:100%"
+                                <img class="graph_active" src="./Resources/assets/images/Fig2.png" style="width:100%"
                                     alt="">
                             </a>
                         </div>
@@ -85,14 +85,14 @@
                         <div class="col-md-6 col-sm-12">
                             <p class="comp_titles">vs. Cloudiness</p>
                             <a href="Cloudiness.html">
-                                <img class="graph_active" src="../Resources/assets/images/Fig3.png" style="width:100%"
+                                <img class="graph_active" src="./Resources/assets/images/Fig3.png" style="width:100%"
                                     alt="">
                             </a>
                         </div>
                         <div class="col-md-6 col-sm-12">
                             <p class="comp_titles">vs. Wind Speed</p>
                             <a href="WindSpeed.html">
-                                <img class="graph_active" src="../Resources/assets/images/Fig4.png" style="width:100%"
+                                <img class="graph_active" src="./Resources/assets/images/Fig4.png" style="width:100%"
                                     alt="">
                             </a>
                         </div>
