--- a/Humidity.html
+++ b/Humidity.html
@@ -64,7 +64,7 @@
                         <h2>Humidity</h2>
                     </div>
                     <hr>
-                    <img src="../Resources/assets/images/Fig2.png" class="img_single" style="width:85%" alt="">
+                    <img src="./Resources/assets/images/Fig2.png" class="img_single" style="width:85%" alt="">
                     <p class="txt_humidity">The figure demonstrates that many observations present a humidity percentage between 60% and 100% across different locations. The latter and the graph itself, suggest that these two factors present a weak correlation.</p>
                 </div>
             </div>
@@ -76,21 +76,21 @@
                     <hr>
                     <div class="row row1_main">
                         <div class="col-md-6 col-sm-6">
-                            <a href="MaxTemp.html"><img class="graph_active" src="../Resources/assets/images/Fig1.png" style="width:100%"
+                            <a href="MaxTemp.html"><img class="graph_active" src="./Resources/assets/images/Fig1.png" style="width:100%"
                                     style="height:100%" alt=""></a>
                         </div>
                         <div class="col-md-6 col-sm-6">
-                            <a href="Humidity.html"><img class="graph_fixed" src="../Resources/assets/images/Fig2.png" style="width:100%"
+                            <a href="Humidity.html"><img class="graph_fixed" src="./Resources/assets/images/Fig2.png" style="width:100%"
                                     style="height:100%" alt=""></a>
                         </div>
                     </div>
                     <div class="row row2_main">
                         <div class="col-md-6 col-sm-6">
-                            <a href="Cloudiness.html"><img class="graph_active" src="../Resources/assets/images/Fig3.png" style="width:100%"
+                            <a href="Cloudiness.html"><img class="graph_active" src="./Resources/assets/images/Fig3.png" style="width:100%"
                                     style="height:100%" alt=""></a>
                         </div>
                         <div class="col-md-6 col-sm-6">
-                            <a href="WindSpeed.html"><img class="graph_active" src="../Resources/assets/images/Fig4.png" style="width:100%"
+                            <a href="WindSpeed.html"><img class="graph_active" src="./Resources/assets/images/Fig4.png" style="width:100%"
                                     style="height:100%" alt=""></a>
                         </div>
                     </div>
