--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <h2>Summary: Latitude vs. X</h2>
                     </div>
                     <hr>
-                    <img src="../Resources/assets/images/Fig1.png" class="main_img" width="250px" height="210px"
+                    <img src="./Resources/assets/images/Fig1.png" class="main_img" width="250px" height="210px"
                         float="left" alt="Latitude vs. Max Temperature">
                     <p class="main_p1">The purpose of this project was to analyze how weather changes as you get
                         closer to the equator. To accomplish this analysis, we first pull data from the
@@ -83,21 +83,21 @@
                     <hr>
                     <div class="row row1_main">
                         <div class="col-md-6 col-sm-6">
-                            <a href="MaxTemp.html"><img class="graph_active" src="../Resources/assets/images/Fig1.png"
+                            <a href="MaxTemp.html"><img class="graph_active" src="./Resources/assets/images/Fig1.png"
                                     style="width:100%" alt=""></a>
                         </div>
                         <div class="col-md-6 col-sm-6">
-                            <a href="Humidity.html"><img class="graph_active" src="../Resources/assets/images/Fig2.png"
+                            <a href="Humidity.html"><img class="graph_active" src="./Resources/assets/images/Fig2.png"
                                     style="width:100%" alt=""></a>
                         </div>
                     </div>
                     <div class="row row2_main">
                         <div class="col-md-6 col-sm-6">
                             <a href="Cloudiness.html"><img class="graph_active"
-                                    src="../Resources/assets/images/Fig3.png" style="width:100%" alt=""></a>
+                                    src="./Resources/assets/images/Fig3.png" style="width:100%" alt=""></a>
                         </div>
                         <div class="col-md-6 col-sm-6">
-                            <a href="WindSpeed.html"><img class="graph_active" src="../Resources/assets/images/Fig4.png"
+                            <a href="WindSpeed.html"><img class="graph_active" src="./Resources/assets/images/Fig4.png"
                                     style="width:100%" alt=""></a>
                         </div>
                     </div>
