--- a/WindSpeed.html
+++ b/WindSpeed.html
@@ -65,7 +65,7 @@
                         <h2>Wind Speed</h2>
                     </div>
                     <hr>
-                    <img src="../Resources/assets/images/Fig4.png" class="img_single" style="width:85%" alt="">
+                    <img src="./Resources/assets/images/Fig4.png" class="img_single" style="width:85%" alt="">
                     <p class="txt_windSp">The graph suggests that wind speed tends to increase as you get far from the equator. The northern hemisphere presents higher wind speed values than the southern hemisphere. Also, it should be noted that many of the observations are concentrated between a wind speed of 0 and 10 mph across different locations in both hemispheres. Despite the above, the graph suggests that the correlation between both factors is weak.</p>
                 </div>
             </div>
@@ -77,21 +77,21 @@
                     <hr>
                     <div class="row row1_main">
                         <div class="col-md-6 col-sm-6">
-                            <a href="MaxTemp.html"><img class="graph_active" src="../Resources/assets/images/Fig1.png" style="width:100%"
+                            <a href="MaxTemp.html"><img class="graph_active" src="./Resources/assets/images/Fig1.png" style="width:100%"
                                     style="height:100%" alt=""></a>
                         </div>
                         <div class="col-md-6 col-sm-6">
-                            <a href="Humidity.html"><img class="graph_active" src="../Resources/assets/images/Fig2.png" style="width:100%"
+                            <a href="Humidity.html"><img class="graph_active" src="./Resources/assets/images/Fig2.png" style="width:100%"
                                     style="height:100%" alt=""></a>
                         </div>
                     </div>
                     <div class="row row2_main">
                         <div class="col-md-6 col-sm-6">
-                            <a href="Cloudiness.html"><img class="graph_active" src="../Resources/assets/images/Fig3.png" style="width:100%"
+                            <a href="Cloudiness.html"><img class="graph_active" src="./Resources/assets/images/Fig3.png" style="width:100%"
                                     style="height:100%" alt=""></a>
                         </div>
                         <div class="col-md-6 col-sm-6">
-                            <a href="WindSpeed.html"><img class="graph_fixed" src="../Resources/assets/images/Fig4.png" style="width:100%"
+                            <a href="WindSpeed.html"><img class="graph_fixed" src="./Resources/assets/images/Fig4.png" style="width:100%"
                                     style="height:100%" alt=""></a>
                         </div>
                     </div>
